--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 	padding: 0;
 	font-size: 15px;
 	color: #443f3f;
-	background: #fff;
+	background: rgb(255, 255, 255);
 	/* min-height: 100vh;
 	background-size: cover;
 	display: flex;
@@ -1930,6 +1930,7 @@ figure.effect-oscar:hover img {
 }
 
 
+
 /* Testimonial
 ================================================== */
 
@@ -3525,7 +3526,11 @@ a.close-styler{
 		padding-top: 80px;
 		font-weight: 700;
 		padding-bottom: 16px;
-		background-color: #001a25;
+		background-image: url(../images/footer-bg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position:  center center;
+        background-attachment: fixed;
 		color: rgb(255, 255, 255);	
 
 	  }
@@ -3627,6 +3632,16 @@ a.close-styler{
 		color: #fff;
 		opacity: 1;
 	}
+
+.img-responsivelogo{
+	width: 100%;
+	height: 85px;
+}
+
+.img-foots{
+	width: 100%;
+	height: 285px;
+}
 
 
 
