--- a/css/responsive.css
+++ b/css/responsive.css
@@ -337,7 +337,7 @@
 
 	.navbar-collapse ul.navbar-nav > li.active > a,
 	.navbar-collapse ul.navbar-nav > li:hover > a{
-		color: #ee3b24;
+		color: #394af8;
 	}
 
 	/* Slideshow */
