--- a/css/presets/preset3.css
+++ b/css/presets/preset3.css
@@ -2,7 +2,7 @@
 ================================================== */
 
 a{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 a.read-more:hover{
@@ -14,27 +14,27 @@ a.read-more:hover{
 ================================================== */
 
 .btn.btn-primary{
-	border: 2px solid #ee3b24;
+	border: 2px solid #031d33;
 }
 
 .btn.btn-primary:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .btn.btn-primary.solid{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 ul.circle li:before{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 ul.check-list li i{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 blockquote {
-	border-left: 5px solid #ee3b24;
+	border-left: 5px solid #031d33;
 }
 
 
@@ -42,33 +42,33 @@ blockquote {
 ================================================== */
 
 .heading:hover .title-icon{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 h2.entry-title a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 /* Icon pentagon */
 
 .icon-pentagon{
-	background: none repeat scroll 0 0 #ee3b24;
+	background: none repeat scroll 0 0 #031d33;
 }
 
 .icon-pentagon:before{
-	border-bottom: 10px solid #ee3b24;
+	border-bottom: 10px solid #031d33;
 }
 
 .icon-pentagon:after {
-	border-top: 10px solid #ee3b24;
+	border-top: 10px solid #031d33;
 }
 
 .service-icon:before {
-	border-bottom: 30px solid #ee3b24;
+	border-bottom: 30px solid #031d33;
 }
 
 .service-icon:after {
-	border-top: 30px solid #ee3b24;
+	border-top: 30px solid #031d33;
 }
 
 /* Carousel controller */
@@ -77,27 +77,27 @@ h2.entry-title a:hover{
 .ts-carousel-controller .right:hover,
 .owl-controls .owl-prev:hover, 
 .owl-controls .owl-next:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Input form */
 
 .form-control:focus{
-	border: 1px solid #ee3b24 !important;
+	border: 1px solid #031d33 !important;
 }
 
 /* Flex Slider */
 
 .portfolio-slider .flex-direction-nav a:hover,
 .ts-flex-slider .flex-direction-nav a:hover {
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Pagination */
 
 .pagination>.active>a, .pagination>.active>a:hover,
 .pagination>li>a:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Header area
@@ -105,37 +105,37 @@ h2.entry-title a:hover{
 
 /*-- Header --*/
 .header{
-	border-top: 5px solid #ee3b24;
+	border-top: 5px solid #031d33;
 }
 
 .header-solid ul.navbar-nav > li:hover > a, .header-solid ul.navbar-nav > li.active > a {
-  color: #ee3b24;
+  color: #031d33;
 }
 
 /*-- Logo --*/
 
 .navbar-brand.navbar-bg{
-	background: #ee3b24;
+	background: #012b2c;
 }
 
 /*-- Main navigation --*/
 
 ul.navbar-nav > li:hover > a, 
 ul.navbar-nav > li.active > a{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .navbar-toggle{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .dropdown-menu > ul > li.active > a{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .dropdown-menu > ul > li>a:hover, 
 .dropdown-menu > ul > li>a:focus{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 
@@ -145,7 +145,7 @@ ul.navbar-nav > li.active > a{
 /*-- Header bgnone fixed --*/
 
 .header-bgnone{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 
@@ -156,18 +156,18 @@ ul.navbar-nav > li.active > a{
 
 #main-slide .carousel-indicators li.active,
 #main-slide .carousel-indicators li:hover {
-    background-color: #ee3b24;
+    background-color: #031d33;
 }
 
 #main-slide .carousel-control i:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Image Block
 ================================================== */
 
 .image-block-content .feature-icon{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 
@@ -175,28 +175,28 @@ ul.navbar-nav > li.active > a{
 ================================================== */
 
 .isotope-nav ul li a{
-	border: 1px solid #ee3b24;
+	border: 1px solid #031d33;
 }
 
 .isotope-nav ul a.active, 
 .isotope-nav ul a:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .isotope-nav ul a.active:after, 
 .isotope-nav ul a:hover:after{
-	border-color: #ee3b24 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+	border-color: #031d33 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
 }
 
 
 /* Feature box
 ================================================== */
 .feature-icon{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .feature-center-icon{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 /* About us
@@ -205,51 +205,51 @@ ul.navbar-nav > li.active > a{
 /* Featured Tab */
 
 .featured-tab .nav-tabs>li.active>a{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .featured-tab .nav-tabs>li.active>a:after{
-	border-left-color: #ee3b24;
+	border-left-color: #031d33;
 }
 
 .featured-tab .nav-tabs>li>a:hover{
-	background: #ee3b24;
-	color: #fff;
+	background: #046372;
+	color: #f4f4f4;
 }
 .featured-tab .nav-tabs>li>a:hover:after{
-	border-left-color: #ee3b24;
+	border-left-color: #046372;
 }
 
 /* Pricing table
 ================================================== */
 
 .plan.featured .plan-price{
-	background: #ee3b24;
+	background: #031d33;
 }
 .plan.featured .plan-price:after{
-	border-top-color: #ee3b24;
+	border-top-color: #031d33;
 }
 
 /* Testimonial
 ================================================== */
 
 .testimonial-slide .testimonial-text:before{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .testimonial-slide .testimonial-text:after{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .testimonial-slide.owl-theme .owl-controls .owl-page.active span{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Recent Post
 ================================================== */
 
 .post-img-overlay a:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 
@@ -257,57 +257,57 @@ ul.navbar-nav > li.active > a{
 ================================================== */
 
 .copyright-info a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .footer2 .copyright-info a{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 #back-to-top .btn.btn-primary:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .footer-about-us h4{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .footer-widget .latest-post-content h4 a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .subscribe button{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Blog Item page
 ================================================== */
 
 .post-meta a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .author-url span a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .comments-counter a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .comments-list .comment-reply:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 /*-- Blog sidebar --*/
 
 
 .widget-tab h4.entry-title a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .widget-tags ul > li a:hover{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Landing page
@@ -315,77 +315,77 @@ ul.navbar-nav > li.active > a{
 
 .landing-header.header-bgnone ul.navbar-nav > li:hover > a, 
 .landing-header.header-bgnone ul.navbar-nav > li.active > a {
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .features-content .features-icon{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .landing_facts{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .landing-tab .nav-tabs>li.active{
-	border-right: 5px solid #ee3b24;
+	border-right: 5px solid #031d33;
 }
 
 .landing-tab .nav-tabs>li.active>a i{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .landing-tab .nav-tabs>li>a:hover{
-	color: #ee3b24 !important;
+	color: #031d33 !important;
 }
 
 .landing-tab .tab-pane i.big{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .app-gallery.owl-theme .owl-controls .owl-page.active span{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .landing_page_clients{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 /* Misc */
 
 .title-border{
-	border-bottom: 2px solid #ee3b24;
+	border-bottom: 2px solid #031d33;
 }
 
 .post-title a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .portfolio-static-desc a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .client-carousel .item a:hover{
-	border: 1px solid #ee3b24;
+	border: 1px solid #031d33;
 }
 
 .footer ul li a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .call-to-action{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .blog-date{
-	background: #ee3b24;
+	background: #031d33;
 }
 
 .widget-categories ul.category-list  li a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 .about-message ul li a:hover{
-	color: #ee3b24;
+	color: #031d33;
 }
 
 
