--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ body{
 	margin: 0;
 	padding: 0;
 	font-size: 15px;
-	color: #443f3f;
-	background: #f4f4f4;
+	color: #ffffff;
+	background: #040018;
 	/* min-height: 100vh;
 	background-size: cover;
 	display: flex;
@@ -38,7 +38,7 @@ body{
 }
 
 h1, h2, h3{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .body-inner{
@@ -58,7 +58,7 @@ a:hover{
 }
 
 a.read-more{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 section{
@@ -156,7 +156,7 @@ h5{
 /* Button variation */
 
 .btn.btn-primary{
-	color: #323232;
+	color: #d8d8d8;
 	border-radius: 50px;
 	padding: 10px 30px;
 	background: none;
@@ -382,7 +382,7 @@ blockquote {
  	font-weight: 400;
  	text-transform: capitalize;
  	display: block;
- 	color: #6A6A6A
+ 	color: #057a97
  }
 
 /* Title style 2 */
@@ -426,7 +426,7 @@ blockquote {
 }
 
 .post-title a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .long-desc{
@@ -1179,7 +1179,7 @@ ul.navbar-nav > li > a i{
 ================================================== */
 
 .image-block{
-	background: #f4f4f4;
+	background: #040018;
 }
 
 .img-block-right{
@@ -1245,7 +1245,7 @@ ul.navbar-nav > li > a i{
 }
 
 .landing-tab .nav-tabs>li.active .tab-info h3{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .landing-tab .nav-tabs>li{
@@ -1256,7 +1256,7 @@ ul.navbar-nav > li > a i{
 	background: none !important;
 	border-radius: 0;
 	padding: 0 15px 0;
-	color: #6A6A6A !important;
+	color: #057a97 !important;
 	position: relative;
 	border: 0 !important;
 	-moz-transition: all 300ms ease;
@@ -1290,7 +1290,7 @@ ul.navbar-nav > li > a i{
 	font-size: 18px;
 	line-height: normal;
 	margin: 0;
-	color: #6A6A6A
+	color: #057a97
 }
 
 
@@ -1339,10 +1339,10 @@ ul.navbar-nav > li > a i{
 }*/
 
 .featured-tab .nav-tabs>li>a{
-	background: #f2f2f2;
+	background: #046372 ;
 	border-radius: 0;
 	padding: 0 15px 0;
-	color: #323232;
+	color: #000000;
 	position: relative;
 	border: 0 !important;
 	line-height: 52px;
@@ -1362,7 +1362,7 @@ ul.navbar-nav > li > a i{
 	position: absolute;
 	border-width: 25px;
 	top: 50%;
-	border-left-color: #f2f2f2;
+	border-left-color: #046372 ;
 	margin-top: -25px;
 		-moz-transition: all 300ms ease;
 	-webkit-transition: all 300ms ease;
@@ -1474,7 +1474,7 @@ ul.navbar-nav > li > a i{
 }
 
 .isotope-nav ul li a{
-	color: #323232;
+	color: #d8d8d8;
   	padding: 5px 15px 8px;
   	border: 1px solid #ddd;
   	-webkit-transition: all 0.3s;
@@ -1654,7 +1654,7 @@ figure.effect-oscar:hover img {
 }
 
 .portfolio-static-desc a{
-	color: #6A6A6A;
+	color: #057a97;
 }
 
 
@@ -1926,7 +1926,7 @@ figure.effect-oscar:hover img {
 }
 
 .recent-post .post-body h3 a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .recent-post .post-body .post-meta a{
@@ -2114,12 +2114,12 @@ figure.effect-oscar:hover img {
 /* About Us */
 
 .about-message{
-	background: #f4f4f4;
+	background: #040018;
 	min-height: 374px;
 }
 
 .about-message ul li a{
-	color: #6A6A6A;
+	color: #057a97;
 }
 
 
@@ -2335,7 +2335,7 @@ h4.panel-title a.collapsed:before {
 
 .post-meta-author a, 
 .post-meta-cats a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .entry-content{
@@ -2382,7 +2382,7 @@ h4.panel-title a.collapsed:before {
 	font-size: 18px;
 }
 .comments-counter a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .comments-list{
@@ -2422,7 +2422,7 @@ h4.panel-title a.collapsed:before {
 
 .comments-list .comment-reply{
 	text-transform: uppercase;
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .comments-reply{
@@ -2476,7 +2476,7 @@ h4.panel-title a.collapsed:before {
 
 .widget-tab .nav-tabs>li>a{
 	background: #f2f2f2;
-	color: #323232;
+	color: #d8d8d8;
 	font-size: 15px;
 	font-weight: 700;
 	text-transform: capitalize;
@@ -2488,7 +2488,7 @@ h4.panel-title a.collapsed:before {
 
 .widget-tab .nav-tabs>li.active>a{
 	background: #fff;
-	color: #323232;
+	color: #d8d8d8;
 	border: 1px solid rgba(0,0,0,.1);
 	border-bottom: 0;
 }
@@ -2519,7 +2519,7 @@ h4.panel-title a.collapsed:before {
 	margin-bottom: 5px;
 }
 .widget-tab h4.entry-title a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .widget-tab .post-meta span{
@@ -2555,7 +2555,7 @@ h4.panel-title a.collapsed:before {
 }
 
 .widget-categories ul.category-list  li a{
-	color: #323232;
+	color: #d8d8d8;
 }
 
 .widget-categories ul.category-list  li:last-child{
@@ -2574,7 +2574,7 @@ h4.panel-title a.collapsed:before {
 
 .widget-tags ul > li a{
 	background: #f2f2f2;
-	color: #6A6A6A;
+	color: #057a97;
 	display: block;
 	font-size: 14px;
 	padding: 5px 15px;
@@ -2773,7 +2773,7 @@ iframe{
 }
 
 .newsletter-form button:hover{
-	color: #323232 !important;
+	color: #d8d8d8 !important;
 }
 
 /* Clients */
@@ -2788,7 +2788,7 @@ iframe{
 .testimonial.elements .testimonial-text, 
 .testimonial.elements .testimonial-content h3.name, 
 .testimonial.elements .testimonial-content h3 span{
-	color: #323232;
+	color: #d8d8d8;
 	max-width: 500px;
 	margin-left: auto;
 	margin-right: auto;
@@ -3448,7 +3448,7 @@ a.close-styler{
 
 .img-responsivelogo{
 	width: 100%;
-	height: 85px;
+	height: 90px;
 }
 
 .img-foots{
@@ -3640,7 +3640,7 @@ a.close-styler{
 .pricing-table-box .pricing-table-box-item .pricing-table-box-item-price > span {
     font-size: 12px;
     font-weight: 400;
-    color: #009AD7
+    color: #00d712
 }
 
 .pricing-table-box .pricing-table-box-item .pricing-table-box-item-purchase {
@@ -3703,6 +3703,10 @@ a.close-styler{
 
 .pricing-table-box .pricing-table-box-item .pricing-table-box-item-price.color2 {
     color: #0a8e97!important;
+}
+
+.fa-trophy, .fa-building, .fa-lock, .fa-clock-o{
+	color: #D4AF37;
 }
 
 @media screen and (max-width: 600px) {
